--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -37,7 +37,7 @@
             MaterialOpacity="0.8" />
       </ExperimentalAcrylicBorder.Material>
     </ExperimentalAcrylicBorder>
-    <Grid RowDefinitions="20,100,30,30,30,30,30,30,*,60,100"
+    <Grid RowDefinitions="20,100,30,30,30,30,30,30,30,*,60,100"
           ColumnDefinitions="5,60,60,*" >
       <Menu Grid.Row="0" Grid.ColumnSpan="4">
         <MenuItem Header="_File" >
@@ -66,7 +66,10 @@
 
         <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Name="Time" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center">1:00</Label>
           <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center">Difficulty</Label>
-          <ComboBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Name="Difficulty" Width="120" VerticalAlignment="Center">
+          <ComboBox Grid.Row="3" Grid.Column="1" 
+                    Grid.ColumnSpan="2" Name="Difficulty" 
+                    Width="120" VerticalAlignment="Center"
+                    SelectedIndex="{Binding SelectedDifficulty}">
             <ComboBoxItem Content="EASY" />
             <ComboBoxItem Content="BASIC" />
             <ComboBoxItem Content="ADVANCED" />
@@ -76,23 +79,24 @@
             <ComboBoxItem Content="ORIGINAL" />
           </ComboBox>
           <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center">Level</Label>
-          <TextBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Name="Level"></TextBox>
+          <TextBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Name="Level" Text="{Binding Level}"/>
           <Label Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center">Offset</Label>
           <TextBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" Name="First"></TextBox>
+          <CheckBox Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" Margin="0 10 0 0">Follow Cusor</CheckBox>
           
           
 
-            <Rectangle Grid.Row="8" />
-            <Button Grid.Row="9" Grid.Column="1" Height="50" Width="50" Margin="5">
+            <Rectangle Grid.Row="9" />
+            <Button Grid.Row="10" Grid.Column="1" Height="50" Width="50" Margin="5">
               <PathIcon Width="13" Data="{StaticResource stop}"/>
             </Button>
-            <Button Grid.Row="9" Grid.Column="2" Height="50" Width="50" Margin="5">
+            <Button Grid.Row="10" Grid.Column="2" Height="50" Width="50" Margin="5">
               <PathIcon Data="{StaticResource play_pause}"/>
             </Button>
         
-        <AvaloniaEdit:TextEditor Grid.Column="3" Grid.Row="1" Grid.RowSpan="9"
+        <AvaloniaEdit:TextEditor Grid.Column="3" Grid.Row="1" Grid.RowSpan="10"
+                                 Document="{Binding FumenContent}"
                            Name="Editor" BorderBrush="#50FFFFFF" BorderThickness="0.5"
-                           Text="(123){4}1,E2,1w5[4:1],"
                            ShowLineNumbers="True" Margin="5 5 5 5" Padding="5"
                            FontFamily="Cascadia Code,Consolas,Menlo,Monospace"
                             />
