--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:AvaloniaEdit="clr-namespace:AvaloniaEdit;assembly=AvaloniaEdit"
+        xmlns:controls="clr-namespace:MajdataEdit_Neo.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
         x:Class="MajdataEdit_Neo.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -34,7 +35,7 @@
             BackgroundSource="Digger"
             TintColor="Black"
             TintOpacity="1"
-            MaterialOpacity="0.8" />
+            MaterialOpacity="0.75" />
       </ExperimentalAcrylicBorder.Material>
     </ExperimentalAcrylicBorder>
     <Grid RowDefinitions="20,100,30,30,30,30,30,30,30,*,60,100"
@@ -64,7 +65,8 @@
         </Menu>
 
 
-        <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Name="Time" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center">1:00</Label>
+        <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Name="Time" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center"
+               Content="{Binding DisplayTime}"/>
           <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center">Difficulty</Label>
           <ComboBox Grid.Row="3" Grid.Column="1" 
                     Grid.ColumnSpan="2" Name="Difficulty" 
@@ -81,7 +83,7 @@
           <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center">Level</Label>
           <TextBox Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Name="Level" Text="{Binding Level}"/>
           <Label Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center">Offset</Label>
-          <TextBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" Name="First"></TextBox>
+          <TextBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2" Name="First" Text="{Binding CurrentSimaiFile.Offset}"/>
           <CheckBox Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="2" Margin="0 10 0 0">Follow Cusor</CheckBox>
           
           
@@ -100,14 +102,17 @@
                            ShowLineNumbers="True" Margin="5 5 5 5" Padding="5"
                            FontFamily="Cascadia Code,Consolas,Menlo,Monospace"
                             />
-       
 
-      <Rectangle Fill="Green" Height="100" Grid.Row="11" Grid.ColumnSpan="4"/>
+
+      <controls:SimaiVisualizerControl Name="SimaiVisual"
+                                       Height="100" Grid.Row="11" Grid.ColumnSpan="4"
+                                       Time="{Binding TrackTime}" TrackIf="{Binding SongTrackInfo}"
+                                       ZoomLevel="{Binding TrackZoomLevel}"/>
       <DockPanel Grid.Row="11" >
-        <Button DockPanel.Dock="Bottom" Width="30" Height="30" Margin="10">
+        <Button Name="ZoomOut" DockPanel.Dock="Bottom" Width="30" Height="30" Margin="10">
           <PathIcon Width="8" Data="{StaticResource zoom_out}"/>
         </Button>
-        <Button DockPanel.Dock="Bottom" Width="30" Height="30" Margin="10">
+        <Button Name="ZoomIn" DockPanel.Dock="Bottom" Width="30" Height="30" Margin="10">
           <PathIcon Width="8" Data="{StaticResource zoom_in}"/>
         </Button>
       </DockPanel>
