--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -138,7 +138,7 @@
       <AvaloniaEdit:TextEditor Grid.Column="3" Grid.Row="1" Grid.RowSpan="3"
                                Document="{Binding FumenContent}"
                                Name="Editor" BorderBrush="#50FFFFFF" BorderThickness="0.5"
-                               ShowLineNumbers="True" Margin="5 5 5 5" Padding="5"
+                               ShowLineNumbers="True" Margin="5 5 5 5" Padding="5" WordWrap="False"
                                FontFamily="Cascadia Code,Consolas,Menlo,Monospace"
                             >
         <AvaloniaEdit:TextEditor.ContextFlyout>
